lib/testrunner/grammar.treetop
grammar TesterGrammar

  rule test_file
    test_group+ {
      def process
        elements.collect{|e| e.process}
      end
    }
  end

  rule test_group
    on_clause test+  {
      def process
        {
          :test_url => on_clause.url.text_value, 
          :tests => elements[1].elements.collect{|e| e.process}
        }
      end
    }
  end

  rule on_clause
    "On " url newline 
  end

  rule test
    space assertion ' ' value newline {
      def process
        {
          :assertion => assertion.to_test_sym,
          :value => value.text_value
        }
      end
    }
  end
 
  rule assertion
    "Source should contain" / "Source should not contain" / "I should see" / "I should not see" / "Headers should include" / "Headers should not include"
  end

  rule newline
    [\n]+ 
  end
  
  rule value
    [^\n]+    
  end

  rule url
    ('http://' / 'https://') [^\n]+
  end

  rule space
    [\s\t]*  
  end
end
